# pipedrive-rs

./: CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Readme.crates.md  Readme.md  build.rs  generated_api.md
.openapi-generator/: FILES
docs/: ActivitiesApi.md  ActivityCollectionResponseObject.md  ActivityDistributionDataWithAdditionalData.md  ActivityDistributionDataWithAdditionalDataAllOfActivityDistribution.md  ActivityDistributionDataWithAdditionalDataAllOfActivityDistributionAssignedToUserId.md  ActivityDistributionDataWithAdditionalDataAllOfActivityDistributionAssignedToUserIdActivities.md  ActivityFieldsApi.md  ActivityResponseObject.md  ActivityTypesApi.md  AddActivityRequest.md  AddActivityResponse200.md  AddActivityResponse200AdditionalData.md  AddActivityResponse200RelatedObjects.md  AddActivityResponse200RelatedObjectsOrganization.md  AddActivityResponse200RelatedObjectsOrganizationOrganizationId.md  AddActivityResponse200RelatedObjectsPerson.md  AddActivityResponse200RelatedObjectsPersonPersonId.md  AddActivityTypeRequest.md  AddCallLogRequest.md  AddChannel200Response.md  AddChannel200ResponseData.md  AddChannel400Response.md  AddChannel400ResponseAdditionalData.md  AddChannel403Response.md  AddChannel403ResponseAdditionalData.md  AddChannelRequest.md  AddDealFollowerRequest.md  AddDealFollowerResponse200.md  AddDealFollowerResponse200Data.md  AddDealParticipantRequest.md  AddDealParticipantResponse200.md  AddDealParticipantResponse200Data.md  AddDealProductRequest.md  AddDealRequest.md  AddFileAndLinkItResponse200.md  AddFileResponse200.md  AddFilterRequest.md  (+536 more)
(+580 files in other folders)
