[package]
name = "pipedrive-rs"
version = "0.0.2"
authors = ["lmtr0 <lmtr0@proton.me>"]
description = "Rust PipedriveClient"

documentation = "https://github.com/lmtr0/pipedrive-rs/blob/main/generated_api.md"
repository = "https://github.com/lmtr0/pipedrive-rs/"
homepage = "https://github.com/lmtr0/pipedrive-rs/"
readme = "Readme.crates.md"
# Override this license by providing a License Object in the OpenAPI.
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_with = "3.0.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde", "v4"] }
anyhow = "1.0.75"
base64 = "0.21.4"
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
dotenv = "0.15.0"
